--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# ignore image public
+/public
+
+
+# Ignore application configuration
+/config/application.yml
